--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,14 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "types": ["node"],
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@/components/*":["components/*"],
+      "@/pages/*":["pages/*"],
+      "@/utilities/*":["utilities/*"]
+    },
 
     /* Linting */
     "strict": true,
